<resources>
    <string name="app_name">HelloKotlin</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string-array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>

    <string name="title_activity_football_matchtab">FootballMatchtabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_football_match_schedule">Football Match Schedule</string>
    <string name="tab_text_1">Last Match</string>
    <string name="tab_text_2">Next Match</string>
    <string name="football_match_schedule">Football Match Schedule</string>
    <string name="list_football_from_api">List of Football From API</string>
    <string name="match_detail">Match Detail</string>
    <string name="favorites">Favorites</string>
    <string name="teams">Teams</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="search">Search</string>
    <string name="match">Match</string>
    <string name="title_activity_team_detail_club">TeamDetailClubActivity</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="team_logo">Team Logo</string>
    <string name="team_name">Team Name</string>
    <string name="team_years">Team Year</string>
    <string name="stadium_name">Stadium</string>

    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_player">Player</string>
    <string name="tab_next">Next</string>
    <string name="tab_last">Last</string>
    <string name="tab_matches">Matches</string>
    <string name="tab_teams">Teams</string>
    <string name="title_match">Football Match</string>
    <string name="title_search_match">Search Matches</string>
    <string name="title_search_team">Search Teams</string>
</resources>
