<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="anko_feature" type="id" />
    <item name="football_club" type="id" />
    <item name="football_match" type="id" />
    <item name="sprinner_team" type="id" />
    <item name="team_toolbar" type="id" />
</resources>